--- a/app/src/main/res/layout/week_fragment.xml
+++ b/app/src/main/res/layout/week_fragment.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
-
-  <geek.owl.com.ua.KNUSchedule.Util.WeekView
+<TextView
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content"
+  android:text=""/>
+  <GridLayout
     android:id="@+id/week1"
     android:layout_width="0dp"
-    android:layout_height="0dp"
+    android:layout_height="342dp"
+    android:layout_marginTop="36dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHeight_percent="0.5"
+    app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-  <geek.owl.com.ua.KNUSchedule.Util.WeekView
+  <GridLayout
     android:id="@+id/week2"
     android:layout_width="0dp"
     android:layout_height="0dp"
@@ -23,7 +29,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/week1" />
 
-  <android.support.v4.widget.SwipeRefreshLayout
+  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:id="@+id/refresh_layout"
     android:layout_width="0dp"
     android:layout_height="0dp"
@@ -32,9 +38,9 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-  </android.support.v4.widget.SwipeRefreshLayout>
+  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-  <android.support.v7.widget.Toolbar
+  <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -46,4 +52,4 @@
     app:title="@string/app_name"
     app:titleTextColor="@color/colorWhite" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
