--- a/app/src/main/res/menu/menu_main2.xml
+++ b/app/src/main/res/menu/menu_main2.xml
@@ -10,7 +10,7 @@
     android:title="" />
   <item
     android:id="@+id/search"
-    app:actionViewClass="android.support.v7.widget.SearchView"
+    app:actionViewClass="androidx.appcompat.widget.SearchView"
     app:showAsAction="always|collapseActionView"
     android:title="Пошук" />
 
