--- a/app/src/main/res/layout/week_fragment.xml
+++ b/app/src/main/res/layout/week_fragment.xml
@@ -4,10 +4,19 @@
   android:layout_height="match_parent"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
-<TextView
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:text=""/>
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginBottom="8dp"
+    android:text="@string/week1_adapter_name"
+    app:layout_constraintBottom_toTopOf="@+id/week1"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />
   <GridLayout
     android:id="@+id/week1"
     android:layout_width="0dp"
@@ -23,22 +32,12 @@
     android:id="@+id/week2"
     android:layout_width="0dp"
     android:layout_height="0dp"
-    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginTop="32dp"
 
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHeight_percent="0.5"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/week1" />
-
-  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:id="@+id/refresh_layout"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/toolbar">
-
-  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar"
@@ -51,5 +50,21 @@
     app:layout_constraintTop_toTopOf="parent"
     app:title="@string/app_name"
     app:titleTextColor="@color/colorWhite" />
+
+  <TextView
+    android:id="@+id/textView5"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginBottom="12dp"
+    android:text="@string/week1_adapter_name"
+    app:layout_constraintBottom_toTopOf="@+id/week2"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/week1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
