--- a/app/src/main/res/drawable/day_background.xml
+++ b/app/src/main/res/drawable/day_background.xml
@@ -2,32 +2,29 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
-      android:shape="rectangle"
-      android:innerRadius="30dp">
-      <corners android:radius="10dp" />
+      android:shape="rectangle">
+      <corners android:radius="5dp" />
 
       <stroke
         android:width="2dp"
         android:color="@color/colorPrimaryDark" />
-      <size
-        android:width="80dp"
-        android:height="50dp" />
       <padding
         android:bottom="30dp"
         android:right="10dp"
         android:left="10dp"
         android:top="10dp" />
+
     </shape>
-
-
   </item>
+
+
   <item>
     <shape android:shape="rectangle">
       <corners android:radius="10dp" />
       <solid android:color="@color/day_selector" />
       <size
         android:width="80dp"
-        android:height="30dp" />
+        android:height="50dp" />
       <padding
         android:bottom="20dp"
         android:right="20dp"
