--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
   <color name="primary">#eee7e4</color>
   <color name="colorPrimaryDark">#475a64</color>
   <color name="colorSecondaryDark">#475a64</color>
-  <color name="appRed">#df5455</color>
+  <color name="appRed">#DF5455</color>
   <color name="colorWhite">#FFFFFF</color>
+  <color name="transparent">#00000000</color>
 </resources>
 
