--- a/app/src/main/res/drawable-hdpi/day_background_inactive.xml
+++ b/app/src/main/res/drawable-hdpi/day_background_inactive.xml
@@ -5,5 +5,5 @@
   <size
     android:width="100dp"
     android:height="90dp" />
-  <solid android:color="@color/primary"/>
+  <solid android:color="@color/colorWhite"/>
 </shape>
