--- a/app/src/main/res/drawable/text_view_background_inactive.xml
+++ b/app/src/main/res/drawable/text_view_background_inactive.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle"
   xmlns:android="http://schemas.android.com/apk/res/android">
   <corners android:radius="10dp" />
-  <solid android:color="@color/appRed" />
+  <solid android:color="@color/colorPrimaryDark" />
   <size
     android:width="60dp"
     android:height="60dp" />
