--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -36,6 +36,7 @@
       android:layout_marginRight="8dp"
       android:layout_marginBottom="8dp"
       android:text=""
+      android:background="@color/transparent"
       android:textAlignment="center"
       android:textColor="@color/colorPrimaryDark"
       android:textStyle="bold"
