--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
   <color name="colorSecondaryDark">#475a64</color>
   <color name="appRed">#DF5455</color>
   <color name="colorWhite">#FFFFFF</color>
+  <color name="transparent">#00000000</color>
 </resources>
 
