--- a/app/src/main/res/layout/link_settings_item.xml
+++ b/app/src/main/res/layout/link_settings_item.xml
@@ -8,18 +8,27 @@
 
     <TextView
         android:id="@+id/link_settings_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:textColor="@color/colorPrimaryDark"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:drawableEnd="@drawable/ic_right_arrow"
         android:gravity="center_vertical"
         android:text="TextView"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/link_settings_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/link_settings_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
